some fixes added stretch

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -124,6 +124,7 @@ h1 {
 }
 
 button {
+	/* border: 2px solid red; */
 	position: relative;
 	top: 35px;
 	right: 385px;
@@ -199,8 +200,8 @@ p {
 }
 
 .contact {
-	/* border: 2px solid blue; */
-	width: 1250px;
+	/*border: 2px solid blue;*/
+	width: 66%;
 	margin: auto;
 	padding-top: 30px;
 	padding-bottom: 50px;
